# statusnotifier

./: .gitignore  Makefile.am  configure.ac  meson.build  meson_options.txt
docs/reference/: meson.build  statusnotifier-docs.xml
example/: meson.build
src/: closures  meson.build  statusnotifier.c  statusnotifier.h
